# Ocean_Simulation_OpenGL

./: .gitignore  LICENSE  README.md
libs/: libs.cmake
libs/datraw/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/imgui/: CMakeLists.txt
libs/imguizmo/: CMakeLists.txt
libs/lodepng/: CMakeLists.txt
src/: main.cpp
src/core/: Core.cpp  Core.h  Input.h  PluginDescriptor.h  PluginRegister.h  RenderPlugin.cpp  RenderPlugin.h
src/core/camera/: AbstractCamera.h  OrbitCamera.cpp  OrbitCamera.h  Trackball.cpp  Trackball.h
src/core/util/: FileUtil.cpp  FileUtil.h  FpsCounter.cpp  FpsCounter.h  GLFWUtil.h  GLUtil.h  ImGuiUtil.h
src/plugins/PCVC/OceanSurface/: OceanSurface.cpp  OceanSurface.h  README.md
src/plugins/PCVC/OceanSurface/resources/shaders/: ButterflyFFT.comp  ButterflyFactor.comp  InverseFFT.comp  NormalMap.comp  OceanSurface.frag  OceanSurface.geom  OceanSurface.vert  PerlinNoise.comp  PhillipsSpectrum.comp  Skybox.frag  Skybox.vert  WaveAmplitude.comp
